--- a/Cloudents.Web/ClientApp/components/header/header.less
+++ b/Cloudents.Web/ClientApp/components/header/header.less
@@ -5,9 +5,38 @@
 
 
 .header {
-    background-image: linear-gradient(276deg, @Spitball-Main-color, #3023ae);
+    //background-image: linear-gradient(276deg, @Spitball-Main-color, #3023ae);
+    background: #fff;
+
+    .toolbar__items {
+        flex-grow: 1;
+        .inTheMiddle();
+    }
 
     .toolbar__title {
+        .inTheMiddle();
+    }
+
+    @logoWidth: 231px;
+
+    .logo-link {
+        .inTheMiddle();
+        width: @logoWidth;
+    }
+
+    .gap {
+        width: @logoWidth;
+        .flexSameSize();
+    }
+
+    .tabs__item {
+        text-transform: capitalize;
+        padding: 0 !important;
+        font-size: 14px;
+        font-weight: 600;
+        letter-spacing: -0.2px;
+    }
+    /*/*.toolbar__title {
         display: flex;
         justify-content: flex-start;
         align-items: center;
@@ -19,8 +48,8 @@
         @media(max-width: 600px) {
             padding-left: 12px;
         }
-    }
-
+    }*/
+    /*
     .logo-link {
         .inTheMiddle();
         fill: #fff;
@@ -34,30 +63,38 @@
         width: 165px;
         height: 32px;
         // .inTheMiddle();
-    }
-
+    }*/
     form {
+        flex-grow: 1;
         width: 100%;
 
         @media(max-width: 600px) {
             align-self: flex-start;
         }
+    }
 
-        .search-b {
-            height: 40px;
-            min-height: 40px;
 
-            .sbf-mic {
-                color: @color-blue !important;
-            }
+    .search-b {
+        height: 40px;
+        min-height: 40px;
+        max-width: 784px;
+        border-radius: 4px;
+        background-color: #f0f0f0;
+        box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);
+        border: solid 0.5px #bbbbbb;
+        color: #000;
+        letter-spacing: -0.4px;
+        font-size: 16px;
+
+        .sbf-mic {
+            color: @color-blue !important;
         }
     }
 
-    .search-b {
-        max-width: 784px;
+    .sbf-3-dot {
+        color: #3293f6;
     }
-
-    .toolbar__content > *:not(.btn):not(.menu):last-child {
+    /*.toolbar__content > *:not(.btn):not(.menu):last-child {
         margin-left: auto;
         margin: 0 14px;
         padding: 0 10px;
@@ -66,10 +103,9 @@
             margin-left: auto;
             margin-right: 0;
         }
-    }
-
-    .settings {
+    }*/
+    /*.settings {
         width: 24px;
         height: 24px;
-    }
+    }*/
 }
