--- a/Cloudents.Web/ClientApp/components/home/features.less
+++ b/Cloudents.Web/ClientApp/components/home/features.less
@@ -97,7 +97,7 @@
         }*/
 
         p {
-            color: #a4a4a4;
+            color: #4a4a4a;
             line-height: 1.44;
             //font-weight: 100;
         }
