--- a/Cloudents.Web/wwwroot/Content/main.less
+++ b/Cloudents.Web/wwwroot/Content/main.less
@@ -65,13 +65,14 @@ button {
         .horizontal-variant(@p,color)
     }
 
-    /*.spitball-bg-@{p} {
+    .spitball-bg-@{p} {
         .horizontal-variant(@p,background);
+
         .spitball-svg-fill {
             fill: #fff;
         }
     }
-    .spitball-fill-@{p} {
+    /*.spitball-fill-@{p} {
         .spitball-svg-fill {
             .horizontal-variant(@p,fill);
         }
