--- a/Cloudents.Web/ClientApp/components/header/header.less
+++ b/Cloudents.Web/ClientApp/components/header/header.less
@@ -15,6 +15,10 @@
         .inTheMiddle();
     }
 
+    .toolbar__content > .layout {
+        height: 100%;
+    }
+
     .toolbar__title {
         .inTheMiddle();
     }
@@ -22,7 +26,9 @@
     @logoWidth: 231px;
 
     .logo-link {
-        .inTheMiddle();
+        //.inTheMiddle();
+        display: flex;
+        align-items: center;
         width: @logoWidth;
     }
 
@@ -37,6 +43,17 @@
         font-size: 14px;
         font-weight: 600;
         letter-spacing: -0.2px;
+    }
+
+    .line {
+        flex: 1;
+        //.inTheMiddle();
+        display: flex;
+        justify-content:center;
+        align-items: flex-end;
+        /*> * {
+            height:100%;
+        }*/
     }
     /*/*.toolbar__title {
         display: flex;
@@ -69,10 +86,6 @@
     form {
         flex-grow: 1;
         width: 100%;
-
-        @media(max-width: 600px) {
-            align-self: flex-start;
-        }
     }
 
 
@@ -92,10 +105,12 @@
             color: @color-blue !important;
         }
     }
-    .btn{
-    .sbf-3-dot {
-        color: #3293f6;
-    }}
+
+    .btn {
+        .sbf-3-dot {
+            color: #3293f6;
+        }
+    }
     /*.toolbar__content > *:not(.btn):not(.menu):last-child {
         margin-left: auto;
         margin: 0 14px;
