--- a/Cloudents.Web/ClientApp/components/results/ResultItem.less
+++ b/Cloudents.Web/ClientApp/components/results/ResultItem.less
@@ -38,8 +38,8 @@
     margin-left: 2px;
     margin-right: 36px;
 
-    @media(max-width: 600) {
-        margin-right: 16px;
+    @media(max-width: 599px) {
+        margin-right: 0;
     }
 }
 
