--- a/Cloudents.Web/ClientApp/components/home/header.less
+++ b/Cloudents.Web/ClientApp/components/home/header.less
@@ -12,10 +12,16 @@
 
     .toolbar__title {
         .inTheMiddle();
-    } 
+    }
+
     .toolbar__content {
         max-width: 1280px;
         margin: 0 auto;
+        padding-left: 20px;
+
+        .btn__content {
+            padding: 0 20px 4px 20px;
+        }
     }
 
     .link-menu {
@@ -36,5 +42,9 @@
 
     .sbf-3-dot {
         color: #3293F6;
+    }
+
+    .logo {
+        margin-right: 10px;
     }
 }
