--- a/Cloudents.Web/ClientApp/components/home/search.less
+++ b/Cloudents.Web/ClientApp/components/home/search.less
@@ -42,6 +42,7 @@
         }
     }
 }
+
 .box-search {
     max-width: 800px;
     flex-grow: 1;
@@ -59,7 +60,7 @@
     }
 
     background: rgba(48,46,181, 0.2);
-    .rounded-all(4px);
+    border-radius: 4px;
     position: relative;
     //margin: 16px 0;
     //height: 100%;
@@ -151,10 +152,10 @@
     button[type="submit"] {
         background: #302eb5;
         //font-family: @font-bold;
-        margin: 0 0 0 12px;
+        margin: 0 0 0 16px;
         padding: 0 24px;
-        width: 108px;
-        .rounded-all(4px);
+        width: 106px;
+        border-radius: 4px;
 
         i {
             color: @color-white;
