--- a/Cloudents.Web/ClientApp/components/home/home.less
+++ b/Cloudents.Web/ClientApp/components/home/home.less
@@ -9,20 +9,14 @@
     }
 
     .header {
-       
     }
     /*.limited-width {
         max-width: 1280px;
         margin: 0 auto;
     }*/
-   
     /*.mic {
     .flexSameSize();
 }*/
-    
-
-   
-
     .box-header {
         /*background: @color-blue url("./img/doodels.png") no-repeat 50% 50%;*/
         //background-image: linear-gradient(317deg, #3293f6, #3023ae);
@@ -33,7 +27,6 @@
         @media(max-width: 960px) {
             padding-bottom: 88px;
         }
-
         /*.logo-wrapper {
             .flexSameSize();
             padding: 12px 12px 10px 12px;
@@ -57,7 +50,6 @@
                 }
             }
         }*/
-
         /*header {
             li {
                 float: left;
@@ -71,7 +63,6 @@
                 letter-spacing: -0.3px;
             }
         }*/
-
         > .container {
             padding: 0;
         }
@@ -83,7 +74,7 @@
             .box-title {
                 font-size: 50px;
                 line-height: normal;
-                padding: 100px 0 30px;
+                padding: 38px 0 5px;
                 font-weight: 300;
                 letter-spacing: -0.5px;
 
@@ -97,7 +88,7 @@
             h4 {
                 font-size: 24px;
                 line-height: normal;
-                margin: 0 0 30px;
+                margin: 0 0 54px;
                 letter-spacing: -0.4px;
                 font-weight: 300;
 
@@ -108,7 +99,7 @@
         }
     }
 
-    
+
 
     .box-small-container {
         margin: 0 auto;
@@ -119,12 +110,16 @@
         padding: 8px;
         background-image: linear-gradient(to bottom, #ffffff, rgba(182,215,250,0.5));
 
+        .websites {
+            padding: 18px 0 0;
+        }
+
         .logos {
-            padding: 24px 0 20px 0;
+            padding: 38px 0 22px 0;
         }
 
         h2 {
-            font-size: 28px;
+            font-size: 16px;
             font-weight: normal;
 
             @media(max-width: 600px) {
@@ -133,7 +128,7 @@
         }
 
         p {
-            font-size: 20px;
+            font-size: 16px;
             padding-bottom: 0;
 
             @media(max-width: 600px) {
