--- a/Cloudents.Web/Views/Shared/Index.cshtml
+++ b/Cloudents.Web/Views/Shared/Index.cshtml
@@ -3,7 +3,6 @@
 @inject WebPackChunkName Provider
 @{
     ViewBag.Title = "Spitball";
-    Layout = "_Layout";
     var main = Provider.GetTag("main");
     //var main = new WebPackBundle
     //{
@@ -13,13 +12,13 @@
 
 
 @*<div id="app" asp-prerender-module="ClientApp/renderOnServer">Loading....</div>*@
- <div id="app">Loading....</div> 
+<div id="app">Loading....</div> 
 <div class="cdn-only2"></div>
 
 @section scripts {
-    <environment include="Development">
+    @*<environment include="Development">
         <script src="~/dist/@main.Js"></script>
-    </environment>
+    </environment>*@
     <environment exclude="Development">
         <script src="@Constants.CdnEndpoint/dist/@main.Js"
                 asp-fallback-src="~/dist/@main.Js"
