--- a/Cloudents.Web/Views/Shared/_Layout.cshtml
+++ b/Cloudents.Web/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <base href="~/" />
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
+    @*<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">*@
     
 
     <environment include="Development">
