Home page fixes

--- a/Cloudents.Web/ClientApp/components/home/home.less
+++ b/Cloudents.Web/ClientApp/components/home/home.less
@@ -74,7 +74,7 @@
             .box-title {
                 font-size: 50px;
                 line-height: normal;
-                padding: 38px 0 5px;
+                padding: 16px 0 5px;
                 font-weight: 300;
                 letter-spacing: -0.5px;
 
@@ -109,9 +109,10 @@
     .websites-section {
         padding: 8px;
         background-image: linear-gradient(to bottom, #ffffff, rgba(182,215,250,0.5));
-
+        
         .websites {
             padding: 18px 0 0;
+            max-width: 1280px;
         }
 
         .logos {
