--- a/Cloudents.Web/ClientApp/components/helpers/generalPage.less
+++ b/Cloudents.Web/ClientApp/components/helpers/generalPage.less
@@ -18,16 +18,19 @@
     .result-cell {
         border-radius: 4px;
         overflow: hidden;
-
-        @media(max-width: 599px) {
+        /*@media(max-width: 599px) {
             margin-left: 8px;
             margin-right: 8px;
-        }
+        }*/
     }
 
     .cell {
         background: #fff;
         border-radius: 4px;
+    }
+
+    .mobile-filter {
+        flex-direction:row-reverse;
     }
 }
 
