--- a/Cloudents.Web/ClientApp/components/home/horizontalStrip.less
+++ b/Cloudents.Web/ClientApp/components/home/horizontalStrip.less
@@ -33,6 +33,10 @@
     &.documents { // Study documents
         background-image: linear-gradient(to bottom, rgba(38,0,75,0.2), rgba(249,249,249,0.2));
 
+        .image-wrapper {
+            width: 446px;
+        }
+
         .strip-title {
             svg {
                 width: 41px;
@@ -46,18 +50,18 @@
         }
 
         .icon-1 {
-            top: 10%;
+            top: 9%;
             left: -6%;
         }
 
         .icon-2 {
-            top: -7%;
+            top: -6%;
             right: 17%;
         }
 
         .icon-3 {
             bottom: 0;
-            right: 6%;
+            right: 7%;
         }
 
         @media(max-width:960px) {
@@ -85,6 +89,10 @@
     &.tutors { // Tutors
         background-image: linear-gradient(to top, rgba(249,249,249,0.2) 10%, rgba(82,171,21,0.2) 98%);
 
+        .image-wrapper {
+            width: 452px;
+        }
+
         .strip-title {
             svg {
                 width: 58px;
@@ -109,12 +117,12 @@
 
         .icon-2 {
             bottom: -12%;
-            right: 16%;
+            right: 14%;
         }
 
         .icon-3 {
             bottom: 7%;
-            left: -9%;
+            left: -7.5%;
         }
 
         @media(max-width:960px) {
@@ -142,6 +150,10 @@
     &.food-deals { // Food and Deals
         background-image: linear-gradient(to bottom, rgba(44,191,165,0.2), rgba(249,249,249,0.2));
 
+        .image-wrapper {
+            width: 438px;
+        }
+
         .strip-title {
             svg {
                 width: 52px;
@@ -160,12 +172,12 @@
 
 
         .icon-1 {
-            top: -23%;
-            left: 38%;
+            top: -20%;
+            left: 39%;
         }
 
         .icon-2 {
-            bottom: -12%;
+            bottom: -11%;
             right: -3%;
         }
 
@@ -199,6 +211,10 @@
     &.textbooks { // Textbooks
         background-image: linear-gradient(to bottom, rgba(249,249,249,0.2), rgba(140,63,191,0.2));
 
+        .image-wrapper {
+            width: 454px;
+        }
+
         .strip-title {
             svg {
                 width: 66px;
@@ -216,18 +232,18 @@
         }
 
         .icon-1 {
-            top: -8%;
-            right: 9%;
+            top: -6.5%;
+            right: 9.5%;
         }
 
         .icon-2 {
-            bottom: -6%;
+            bottom: -6.5%;
             right: 18%;
         }
 
         .icon-3 {
-            bottom: 12%;
-            left: -20%;
+            bottom: 11%;
+            left: -18%;
         }
 
         @media(max-width:960px) {
@@ -255,6 +271,10 @@
     &.flashcards { // Flashcards
         background-image: linear-gradient(to top, rgba(241,77,77,0.2), rgba(249,249,249,0.2));
 
+        .image-wrapper {
+            width: 438px;
+        }
+
         .strip-title {
             svg {
                 width: 62px;
@@ -273,12 +293,12 @@
 
         .icon-1 {
             top: 3%;
-            left: 2%;
+            left: 1.5%;
         }
 
         .icon-2 {
             top: -15%;
-            right: 23%;
+            right: 23.5%;
         }
 
         .icon-3 {
@@ -311,6 +331,10 @@
     &.ask-question { // Ask a Question
         background-image: linear-gradient(to top, rgba(249,249,249,0.2), rgba(4,85,168,0.2));
 
+        .image-wrapper {
+            width: 434px;
+        }
+
         .strip-title {
             svg {
                 width: 64px;
@@ -338,8 +362,8 @@
         }
 
         .icon-3 {
-            top: -12%;
-            left: 16%;
+            top: -13.5%;
+            left: 15.5%;
         }
 
         @media(max-width:960px) {
@@ -367,6 +391,10 @@
     &.jobs { // Jobs
         background-image: linear-gradient(to top, rgba(245,166,35,0.2), rgba(249,249,249,0.2));
 
+        .image-wrapper {
+            width: 452px;
+        }
+
         .strip-title {
             svg {
                 width: 32px;
@@ -384,18 +412,18 @@
         }
 
         .icon-1 {
-            top: -11%;
-            left: 44%;
+            top: -7.5%;
+            left: 46%;
         }
 
         .icon-2 {
-            bottom: -19%;
-            right: 9%;
+            bottom: -18.5%;
+            right: 10%;
         }
 
         .icon-3 {
-            bottom: -18%;
-            left: 8%;
+            bottom: -17%;
+            left: 8.5%;
         }
 
         @media(max-width:960px) {
@@ -457,7 +485,7 @@
     }
 
     .description {
-        padding: 24px 4px;
+        padding: 0px 2px 8px 2px;
 
         @media(max-width: 960px) {
             padding: 8px 0;
@@ -478,7 +506,8 @@
             h3 {
                 font-size: 30px;
                 font-weight: normal;
-                margin: 0 0 0 16px;
+                margin: 0 0 0 12px;
+                letter-spacing: -0.6px;
 
                 @media(max-width: 960px) {
                     font-size: 20px;
@@ -490,8 +519,10 @@
         .strip-text {
             font-size: 20px;
             color: #4a4a4a;
-            margin: 16px 0 0 0;
             max-width: 450px;
+            letter-spacing: -0.45px;
+            margin: 6px 0 0 0;
+            line-height: 33px;
 
             @media(max-width: 960px) {
                 font-size: 16px;
