--- a/Cloudents.Web/ClientApp/components/home/header.less
+++ b/Cloudents.Web/ClientApp/components/home/header.less
@@ -1,4 +1,5 @@
 ﻿@import "../../mixin.less";
+
 .h-p-header {
 
     &.toolbar {
@@ -22,6 +23,10 @@
         .btn__content {
             padding: 0 20px 4px 20px;
         }
+    }
+
+    .spacing {
+        width: 30px;
     }
 
     .link-menu {
