--- a/Cloudents.Web/ClientApp/components/home/search.less
+++ b/Cloudents.Web/ClientApp/components/home/search.less
@@ -69,7 +69,11 @@
     position: relative;
     //margin: 16px 0;
     //height: 100%;
-    @media(max-width: @mobileBreakPoint) {
+    @media(max-width: @tabletEndBreakPoint) {
+        margin: 0 auto !important;
+    }
+
+    @media(max-width: @mobileEndBreakPoint) {
         //margin: 8px;
         max-width: 100%;
         margin: -8px 8px 0; // hack on top because the two cells are in the same height( blame Shlomi)
@@ -91,7 +95,7 @@
         font-weight: bold;
         letter-spacing: -0.4px;
 
-        @media(max-width: @mobileBreakPoint) {
+        @media(max-width: 599px) {
             height: @submitMobileHeight;
         }
     }
@@ -99,7 +103,7 @@
     form .container {
         padding: 16px;
 
-        @media(max-width: @mobileBreakPoint) {
+        @media(max-width: 599px) {
             padding: 8px;
         }
     }
@@ -126,9 +130,12 @@
         }
 
 
-        @media(max-width:@mobileBreakPoint) {
+        @media(max-width:@tabletEndBreakPoint) {
             border-top-right-radius: 0;
             border-bottom-right-radius: 0;
+        }
+
+        @media(max-width:599px) {
             height: @submitMobileHeight;
 
             .input-group__prepend-icon {
@@ -171,7 +178,7 @@
             color: @color-white;
         }
 
-        @media(max-width: @mobileBreakPoint) {
+        @media(max-width: @tabletEndBreakPoint) {
             margin: 0;
             border-top-left-radius: 0;
             border-bottom-left-radius: 0;
