--- a/Cloudents.Web/ClientApp/mixin.less
+++ b/Cloudents.Web/ClientApp/mixin.less
@@ -63,7 +63,6 @@
 @Selected-Vertical: #2a7bcf;
 @Feed-Date: #888b8e;
 
-@mobile-breakpoint: 600px;
 
 
 
@@ -142,3 +141,5 @@
 @navBarHeightMobile: 96px;
 @resultsFilterWidth: 230px;
 @resultsTabsHeight: 52px;
+@mobileEndBreakPoint: 599px;
+@tabletEndBreakPoint: 959px;
