--- a/Cloudents.Web/ClientApp/components/home/header.less
+++ b/Cloudents.Web/ClientApp/components/home/header.less
@@ -20,6 +20,11 @@
         margin: 0 auto;
         padding-left: 20px;
 
+        @media(max-width: @tabletEndBreakPoint) {
+            max-width: 736px;
+            padding-left: 0;
+        }
+
         .btn__content {
             padding: 0 20px 4px 20px;
         }
